<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Go4Lunch</string>

    <!-- MAIN ACTIVITY -->
    <string name="error_not_connected">Vous devez vous connecter !</string>
    <string name="error_authentication_canceled">Authentification annulée&#8230;</string>
    <string name="error_no_internet">Aucune connexion internet !</string>
    <string name="error_unknown_error">Une erreur inconnue s\'est produite&#8230;</string>
    <string name="connection_succeed">Authentification réussie !</string>
    <string name="button_login_text_logged">Afficher le profil</string>
    <string name="button_login_text_not_logged">Connexion</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">329110107817573</string>
    <string name="facebook_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb329110107817573</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_lunch">Your lunch</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_logout">Log out</string>
    <string name="info_no_email_found">No email address</string>
    <string name="info_no_username_found">Unknown</string>
    <string name="no_restaurant_picked_navdrawer">No restaurant picked yet!</string>

    <!-- Tab Layout-->
    <string name="tablayout_maps">Maps View</string>
    <string name="tablayout_list">List View</string>
    <string name="tablayout_workmates">Workmates</string>

    <!-- Tab Layout-->
    <string name="google_maps_API_key">AIzaSyD67s89baepSssnpIW9prdJgCQwbQZW1_c</string>

    <!-- Opening hours-->
    <string name="open24_7">Open 24/7</string>
    <string name="open">Open until\u0020</string>
    <string name="closing_soon">Closing soon</string>
    <string name="closed">Closed</string>
    <string name="no_hour_information">No information</string>

    <!-- Restaurant Card -->
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="website">Website</string>
    <string name="restaurant_picture_description">restaurant picture</string>

    <!-- Settings -->
    <string name="profile">Your Profile</string>
    <string name="username">Name :</string>
    <string name="delete">Delete my account</string>
    <string name="popup_message_confirmation_delete_account">Are you sure you want to delete account ?</string>
    <string name="popup_message_choice_yes">Yes !</string>
    <string name="popup_message_choice_no">No</string>
    <string name="email_address">Email : </string>
    <string name="profile_image_description">profile picture</string>

    <!-- Your Lunch -->
    <string name="your_lunch_dialog_title">Today\'s lunch</string>
    <string name="your_lunch_dialog_message">You are eating at </string>

    <!-- Workmates view holder -->
    <string name="no_restaurant_picked">\u0020hasn\'t decided yet</string>
    <string name="restaurant_picked">\u0020is eating at\u0020</string>
    <string name="joining">\u0020is joining</string>

    <!-- Restaurant item -->
    <string name="number_of_person">number of person</string>
    <string name="stars">rating stars</string>

    <!--NotificationRestaurant-->
    <string name="notification_title">It\'s time to lunch !</string>
</resources>
