<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:showIn="navigation_view">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/activity_main_drawer_lunch"
        android:icon="@drawable/ic_local_dining_white_24x24"
        android:title="@string/navigation_drawer_lunch" />
    <item
        android:id="@+id/activity_main_drawer_setting"
        android:icon="@drawable/ic_settings_white_24x24"
        android:title="@string/navigation_drawer_settings" />
    <item
        android:id="@+id/activity_main_drawer_logout"
        android:icon="@drawable/ic_power_settings_new_white_24x24"
        android:title="@string/navigation_drawer_logout"
        />
</group>


</menu>