<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Controller.Activities.RestaurantCardActivity">

    <ImageView
        android:id="@+id/activity_restaurant_card_imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="1"
        android:background="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/restaurant_picture_description" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_restaurant_card_check_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/restaurant_id_view"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_card_imageView"
        app:srcCompat="@drawable/check_circle_black_24x24"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@android:color/white"/>

    <LinearLayout
        android:id="@+id/restaurant_id_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_card_imageView">

        <TextView
            android:id="@+id/activity_restaurant_card_restaurant_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_size"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_card_imageView" />

        <TextView
            android:id="@+id/activity_restaurant_card_restaurant_address_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="20dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_card_restaurant_name_txt" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_restaurant_card_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/restaurant_id_view">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/activity_restaurant_card_call_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@android:color/white"
            android:drawableTop="@drawable/phone_colorprimary"
            android:text="@string/call"
            android:textColor="@color/colorPrimary" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/activity_restaurant_card_like_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@android:color/white"
            android:drawableTop="@drawable/grade_black_24x24"
            android:text="@string/like"
            android:textColor="@color/colorPrimary" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/activity_restaurant_card_website_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:background="@android:color/white"
            android:drawableTop="@drawable/publ_colorprimary"
            android:text="@string/website"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/activity_restaurant_card_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_restaurant_card_linearLayout"
        android:visibility="invisible">
    </android.support.v7.widget.RecyclerView>



</android.support.constraint.ConstraintLayout>